--- a/package.json
+++ b/package.json
@@ -6,21 +6,33 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
+    "bulma": "^1.0.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "inversify": "^6.0.1",
+    "mobx": "^6.3.10",
+    "mobx-react-lite": "^3.2.3",
     "next": "^13.1.2",
     "prettier": "^2.6.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.24.1",
+    "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/react": "^15.0.7",
+    "@types/jest": "^29.5.12",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "eslint": "7.29.0",
     "eslint-config-next": "^13.1.2",
     "eslint-config-prettier": "^8.6.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "typescript": "^4.9.4"
   }
 }
